@@ -1,5 +1,0 @@
-This module adds an additional target to the Makefile generated by
-ExtUtils::MakeMaker. The target, testcover, calls cover, the command-line
-script to generate test coverage statistics, to clean up any data from a
-previous run. It then runs the tests, as if make test was run, then calls
-cover again to generate the coverage statistics.
