@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.3 2015/11/03 03:28:13 agc Exp $
-
-SHA1 (ExtUtils-MakeMaker-Coverage-0.05.tar.gz) = 3e424bcac5cfb53c9af138581adc785bd732e7d1
-RMD160 (ExtUtils-MakeMaker-Coverage-0.05.tar.gz) = daa568f4a49a3d7ca2cc207af4b848cb3579d88f
-SHA512 (ExtUtils-MakeMaker-Coverage-0.05.tar.gz) = 37a05344af5090417cd1b30130eaa12c1a88776b3d770e9dc5fa454159166369fd2ba9d9c0ab0b63428a7fbac91c003e306c55d9ac1a25d327e35c2f689a2661
-Size (ExtUtils-MakeMaker-Coverage-0.05.tar.gz) = 6439 bytes
